display user/org and repository on the home page

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 </head>
 <body>
   <h1>Pomodoro Timer</h1>
+  <div id="username"></div>
+  <div id="repository"></div>
+
   <div id="timer">25:00</div>
   <button id="start">Start</button>
   <button id="stop">Stop</button>
